OPT-7246: decouple the service from es (#9033)
* feat(opensearch): decoupling services from es

* feat(opensearch): decouple the service from es

---------

Co-authored-by: kovaIenko <“ruslan.kovalenko-ext@camunda.com”>